--- a/hugo.toml
+++ b/hugo.toml
@@ -33,7 +33,7 @@ pygmentsCodefencesGuessSyntax = true
 #  cusdisID = "XXX" # Get your App id from cusdis.com
   hideAuthor = true
 #  gcse = "012345678901234567890:abcdefghijk" # Get your code from google.com/cse. Make sure to go to "Look and Feel" and change Layout to "Full Width" and Theme to "Classic"
-  disclaimerText = "The opinions expressed herein are my own personal opinions and do not represent my employer or any organization view in any way."
+  disclaimerText = "The opinions expressed herein are personal and should not be interpreted otherwise."
 
 #[[Params.bigimg]]
 #  src = "img/triangle.jpg"
